--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-html{
-	font-size: 16px;
-}
+
 
 body{
 	background-color: #253150;
@@ -23,11 +20,20 @@ body{
 	/* Overall font properties */
 
 	font-family: 'Roboto', serif;
-	letter-spacing: 3px;
+	letter-spacing: 8px;
 	text-transform: uppercase;
 	color: #49C155;
 	font-size: 1.5rem;
 	text-align: center;
+}
+
+#landingPage_Welcome {
+	letter-spacing: 32px;
+	margin-bottom: -16px;
+}
+
+div.link {
+	padding-top: 32px;
 }
 
 .link a{
@@ -35,6 +41,7 @@ body{
 	text-decoration: none;
 	padding:6px 12px;
 	border: 4px solid #49C155;
+	letter-spacing: 4px;
 	border-radius: 16px;
 	transition: all linear .1s;
 }
