--- a/CSS/home.css
+++ b/CSS/home.css
@@ -10,6 +10,7 @@ body {
 	margin:0;
 }
 
+
 .navbar {
 	display:flex;
 	flex-direction: row;
@@ -22,7 +23,7 @@ body {
 	font-family: 'Roboto';
 	text-decoration: none;
 	color: white;
-	padding: 8px 16px 8px 16px;
+	padding: 0.5rem 1rem;
 	transition: background-color linear 0.1s;
 }
 
@@ -31,7 +32,9 @@ body {
 }
 
 
-.textBody h1{font-family: 'Roboto';}
+.textBody h1{
+	font-family: 'Roboto';
+}
 .textBody p {
 	font-family: 'Merriweather Sans', sans-serif;
 }
