--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+html {
+	font-size: 16px;
+}
+
 body{
 	background-color: #253150;
 	margin: 0px;
@@ -21,7 +25,7 @@ body{
 	/* Overall font properties */
 
 	font-family: 'Roboto', serif;
-	letter-spacing: 8px;
+	letter-spacing: 0.5rem;
 	text-transform: uppercase;
 	color: #49C155;
 	font-size: 1.5rem;
@@ -29,21 +33,21 @@ body{
 }
 
 #landingPage_Welcome {
-	letter-spacing: 32px;
-	margin-bottom: -16px;
+	letter-spacing: 2rem;
+	margin-bottom: -1rem;
 }
 
 div.link {
-	padding-top: 32px;
+	padding-top: 2rem;
 }
 
 .link a{
 	color: #49C155;
 	text-decoration: none;
-	padding:6px 12px;
-	border: 4px solid #49C155;
-	letter-spacing: 4px;
-	border-radius: 16px;
+	padding:0.375rem 0.75rem;
+	border: 0.25rem solid #49C155;
+	letter-spacing: 0.25rem;
+	border-radius: 1rem;
 	transition: all linear .1s;
 }
 
