--- a/CSS/home.css
+++ b/CSS/home.css
@@ -10,31 +10,45 @@ body {
 	margin:0;
 }
 
-
-.navbar {
+.cover {
+	position: relative;
+	padding:0;
+	margin: unset;
 	display:flex;
-	flex-direction: row;
-	background-color: #253150;
-	
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-image: url(https://www.incimages.com/uploaded_files/image/1920x1080/getty_660582997_412145.jpg);
+	background-size: cover;
+	height: 400px;
 }
 
-.navbar a {
+.cover h1 {
+	z-index: 1;
+	font-family: 'Roboto';
+	color:white;
 	text-transform: uppercase;
-	font-family: 'Roboto';
-	text-decoration: none;
-	color: white;
-	padding: 0.5rem 1rem;
-	transition: background-color linear 0.1s;
+	/* text-shadow: 5px 4px 4px black; */
+	letter-spacing: 0.35rem;
 }
 
-.navbar a:hover{
-	background-color: #49C155;
+.overlay{
+	z-index: 0;
+	position:absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.5;
 }
 
+.textBody {
+	text-align: justify;
+	margin: 0rem 2rem;
 
-.textBody h1{
-	font-family: 'Roboto';
 }
+
 .textBody p {
 	font-family: 'Merriweather Sans', sans-serif;
 }
