--- a/CSS/common.css
+++ b/CSS/common.css
@@ -11,6 +11,8 @@ this is where the navigation bar and footer code are. the html code is copy/past
 	margin: 0;
 }
 
+
+
 .navbar .desktop {
 	width:100%;
 	display:flex;
@@ -96,7 +98,7 @@ this is where the navigation bar and footer code are. the html code is copy/past
 	display:block;
 }
 
-
+/* Tablet media Query */
 @media only screen and (max-width: 768px){
 	/* common */
 	.navbar .desktop {
@@ -107,9 +109,20 @@ this is where the navigation bar and footer code are. the html code is copy/past
 		line-height:1.5rem;
 		display:flex;
 	}
+
 	/* home */
 	.cover {
 		height: 200px;
+	}
+
+	.cover h1 {
+		font-size: 1rem;
+		text-align: center;
+
+	}
+
+	.breaker {
+		display: block;
 	}
 	/* baiting */
 	/* ransomware */
@@ -120,6 +133,7 @@ this is where the navigation bar and footer code are. the html code is copy/past
 	/* vishing */
 }
 
+/* Desktop Resizing formatting */
 @media only screen and (max-width: 940px){
 	/* common */
 	.navbar .desktop a{
@@ -129,9 +143,10 @@ this is where the navigation bar and footer code are. the html code is copy/past
 		line-height: 3rem;
 		font-size: 0.9rem;
 	}
+
 	/* home */
 	.cover h1 {
-		font-size: 1.2rem;
+		font-size: 1.75rem;
 	}
 
 	/* baiting */
@@ -143,7 +158,7 @@ this is where the navigation bar and footer code are. the html code is copy/past
 	/* vishing */
 
 }
-
+/* Desktop Resizing formatting */
 @media only screen and (max-width: 1096px){
 	/* common */
 	.navbar .desktop{
