Video Cover added
JavaScript added to check for window resize event

--- a/CSS/common.css
+++ b/CSS/common.css
@@ -138,7 +138,7 @@ this is where the navigation bar and footer code are. the html code is copy/past
 	/* common */
 	.navbar .desktop a{
 		flex: 1 1 auto;
-		padding: 0;
+		padding: 0.35rem;
 		margin: 0;
 		line-height: 3rem;
 		font-size: 0.9rem;
