--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,7 +13,7 @@ body{
 
 
 
-.landingPage {
+.landingPage-desktop {
 	/* text positioning */
 
 	margin: 0;
@@ -30,11 +30,29 @@ body{
 	color: #49C155;
 	font-size: 1.5rem;
 	text-align: center;
+	display: block;
+}
+
+.landingPage-mobile {
+	display: none;
+	padding: 15rem 0;
+	font-family: 'Roboto', serif;
+	letter-spacing: 0.3rem;
+	text-transform: uppercase;
+	color: #49C155;
+	font-size: 1.5rem;
+	text-align: center;
 }
 
 #landingPage_Welcome {
 	letter-spacing: 2rem;
 	margin-bottom: -1rem;
+}
+
+.landingPage-mobile #landingPage_Welcome {
+	letter-spacing: 1rem;
+	margin-bottom: 0rem;
+
 }
 
 .link {
