--- a/CSS/common.css
+++ b/CSS/common.css
@@ -137,22 +137,40 @@ body {
 }
 
 /* below is the formatting for the textBody of each page */
-.textBody {
+.textBody{
 	text-align: left;
-	padding: 0rem 16rem;
-	padding-top: 1rem;
-	padding-bottom: 3rem;
-
 }
 
 .textBody h3 {
 	margin-top: 0.5rem;
 	text-align: center;
-	font-family: 'Merriweather',sans-serif;
+	font-family: 'Roboto';
+}
+
+.youtubeLink {
+	position: relative;
+	padding-bottom:56.25% ;
+}
+
+.video-wrapper {
+	margin: 0rem auto;
+	display: block;
+	text-align: center;
+	max-width: 700px;
+}
+iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100% !important;
+	height: 100%;
 }
 
 .textBody p {
 	font-family: 'Merriweather Sans', sans-serif;
+	padding: 0rem 16rem;
+	padding-top: 1rem;
+	padding-bottom: 3rem;
 }
 
 .textBody iframe{
@@ -180,7 +198,7 @@ footer div {
 	padding: 0;
 	border: 0.25rem solid white;
 	border-top: none;
-	line-height: 1.4rem;
+	line-height: 1.5rem;
 	margin: 0.5rem 1.5rem;
 	border-radius: 0rem;
 }
@@ -214,17 +232,38 @@ footer div h3 {
 }
 
 
-#left p, #center p, #right p{
-	padding-bottom: 0.5rem;
+.contactLinks {
+	display: block;
+	border:none;
+}
+
+.contactLinks.desktop {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.contactLinks.mobile{
+	display: none;
+}
+
+
+#left p, #center p, #right div{
+	padding: 0rem 0.5rem;
 	text-align: center;
+}
+#right{
+	justify-content: center;
+	align-items: center;
 }
 
 		@media only screen and (max-width: 1096px){
 			/* common */
-			.textBody{
-				padding: 0rem 7rem;
+			.textBody p{
+				padding: 0rem 5rem;
 				padding-top: 1rem;
-				padding-bottom: 3rem;
+				padding-bottom: 2rem;
 			}
 			.navbar .desktop{
 				text-align: center;
@@ -246,67 +285,13 @@ footer div h3 {
 			/* water-holing */
 			/* vishing */
 		}
-		@media only screen and (max-width:600px){
-			.textBody {
-				margin: 0;
-				padding: 0rem 0rem;
-			}
-		}
-		/* Tablet media Query */
-		@media only screen and (max-width: 820px){
-			/* common */
-			.textBody {
-				padding: 0rem 2rem;
-				padding-bottom: 3rem;
-			}
-			.navbar .desktop {
-				display:none;
-			}
-			.navbar .mobile {
-				font-size: 1.2rem;
-				line-height:1.5rem;
-				display:flex;
-			}
-
-			.coverImage {
-				height: 300px;
-			}
-			
-
-			/* index */
-			.landingPage-desktop {
-				display:none;
-			}
-			.landingPage-mobile {
-				display: block;
-			}
-			/* home */
-			.cover {
-				height: 300px;
-			}
-
-			.cover h1, .coverImage:not(#disableFontResize) h1 {
-				font-size: 1rem;
-				text-align: center;
-			}
-
-			.breaker {
-				display: block;
-			}
-			/* baiting */
-
-			/* ransomware */
-			/* pre-texting */
-			/* phishing */
-			/* spear-phishing */
-			/* water-holing */
-			/* vishing */
-		}
-
 		/* Desktop Resizing formatting */
 		@media only screen and (max-width: 940px){
 			/* common */
 			.textBody{
+				text-align: justify;
+			}
+			.textBody p{
 				padding: 0rem 2rem;
 				padding-bottom: 3rem;
 			}
@@ -332,8 +317,100 @@ footer div h3 {
 			/* pre-texting */
 			/* phishing */
 			/* spear-phishing */
+			.video-wrapper {
+				max-width: 80%;
+			}
 			/* water-holing */
 			/* vishing */
 
 		}
-		/* Desktop Resizing formatting */
+		/* Tablet media Query */
+		@media only screen and (max-width: 820px){
+			/* common */
+			
+			.textBody p{
+				padding: 0rem 2rem;
+				padding-top: 0.5rem;
+				padding-bottom: 3rem;
+			}
+			.navbar .desktop {
+				display:none;
+			}
+			.navbar .mobile {
+				font-size: 1.2rem;
+				line-height:1.5rem;
+				display:flex;
+			}
+
+			.coverImage {
+				height: 300px;
+			}
+			
+
+			/* index */
+			.landingPage-desktop {
+				height: 0%;
+				display:none;
+			}
+			.landingPage-mobile {
+				position: unset;
+				display: flex;
+				flex-direction: column;
+			}
+			/* home */
+			.cover {
+				height: 300px;
+			}
+
+			.cover h1, .coverImage:not(#disableFontResize) h1 {
+				font-size: 1.5rem;
+				text-align: center;
+			}
+
+			.breaker {
+				display: block;
+			}
+			/* baiting.html */
+			/* ransomware.html */
+			/* pre-texting.html */
+			/* phishing.html */
+			/* spear-phishing.html */
+			/* water-holing.html */
+			/* vishing.html */
+		}
+		
+		@media only screen and (max-width:600px){
+			.textBody {
+				margin: 0;
+				padding: 0rem 0rem;
+			}
+			/* footer.html */
+			.contactLinks.desktop {
+				display: none;
+			}
+			.contactLinks.mobile {
+				display:flex;
+				
+				justify-content: center;
+				align-items: center;
+				flex-direction: row;
+				flex: 1 1;
+			}
+
+			.contactLinks.mobile div{
+				border:none;
+				flex: 1 1;
+			}
+			.contactLinks.mobile a i{
+				font-size: 1.4rem;
+			}
+			.contactLinks.mobile a:hover{
+				color: #49C155;
+			}
+
+			/* spear-phishing */
+			.video-wrapper {
+				max-width: 100%;
+			}
+		}
+
