--- a/CSS/index.css
+++ b/CSS/index.css
@@ -35,7 +35,7 @@ body{
 
 .landingPage-mobile {
 	display: none;
-	padding: 15rem 0;
+	margin-top: 10rem;
 	font-family: 'Roboto', serif;
 	letter-spacing: 0.3rem;
 	text-transform: uppercase;
