--- a/CSS/common.css
+++ b/CSS/common.css
@@ -146,7 +146,41 @@ body {
 	text-align: center;
 	font-family: 'Roboto';
 }
+div.flexImg{
+	text-align: center;
+	margin-top: 0.5rem;
+	margin-bottom: 1rem;
+}
+img.flexImg {
+	max-width: 600px;
+}
+.listDescriptor{
+	text-align: center;
+}
 
+.bulletList {
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-right: auto;
+	margin-left: auto;
+	max-width: 60%;
+}
+
+ol {
+	text-align: center;
+	margin:1em 0 1em 6em;
+	/* list-style-position: inside; */
+	/* list-style: disc; */
+
+}
+
+ol li {
+	font-family: 'Merriweather Sans', sans-serif;
+	padding-bottom: 1rem;
+	text-align: left;
+	display:list-item;
+}
 .youtubeLink {
 	position: relative;
 	padding-bottom:56.25% ;
@@ -258,8 +292,11 @@ footer div h3 {
 	align-items: center;
 }
 
-		@media only screen and (max-width: 1096px){
+		@media only screen and (max-width: 1110px){
 			/* common */
+			.bulletList {
+				max-width: 50%;
+			}
 			.textBody p{
 				padding: 0rem 5rem;
 				padding-top: 1rem;
@@ -287,9 +324,16 @@ footer div h3 {
 		}
 		/* Desktop Resizing formatting */
 		@media only screen and (max-width: 940px){
-			/* common */
-			.textBody{
-				text-align: justify;
+			/* common */			
+			.bulletList{
+				max-width:100%;
+				padding:0;
+				margin: 0;
+			}
+			ol{
+				list-style-position: inside;
+				margin:0;
+				margin-left:1.2rem;
 			}
 			.textBody p{
 				padding: 0rem 2rem;
@@ -410,6 +454,10 @@ footer div h3 {
 
 			/* spear-phishing */
 			.video-wrapper {
+				max-width: 100%;
+			}
+			/* ransomware */
+			img.flexImg {
 				max-width: 100%;
 			}
 		}
