--- a/CSS/ransomware.css
+++ b/CSS/ransomware.css
@@ -1,5 +1,5 @@
 .coverImage{
 	background-image: url("../images/Ransomware/jefferson-santos-9SoCnyQmkzI-unsplash.jpg");
 	background-repeat: no-repeat;
-	background-position: bottom center;
+	background-position: center center;
 }
