--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,7 +6,7 @@ html {
 }
 
 body{
-	background-color: #253150;
+	background-color: var(--navy-theme);
 	margin: 0px;
 	padding: 0px;
 }
@@ -27,7 +27,7 @@ body{
 	font-family: 'Roboto', serif;
 	letter-spacing: 0.5rem;
 	text-transform: uppercase;
-	color: #49C155;
+	color: var(--green-theme);
 	font-size: 1.5rem;
 	text-align: center;
 	display: block;
@@ -39,7 +39,7 @@ body{
 	font-family: 'Roboto', serif;
 	letter-spacing: 0.3rem;
 	text-transform: uppercase;
-	color: #49C155;
+	color: var(--green-theme);
 	font-size: 1.5rem;
 	text-align: center;
 }
@@ -61,16 +61,16 @@ body{
 
 
 .link a{
-	color: #49C155;
+	color: var(--green-theme);
 	text-decoration: none;
 	padding:0.375rem 0.75rem;
-	border: 0.25rem solid #49C155;
+	border: 0.25rem solid var(--green-theme);
 	letter-spacing: 0.25rem;
 	border-radius: 1rem;
 	transition: all linear .1s;
 }
 
 .link a:hover {
-	background-color: #49C155;
-	color: #253150;
+	background-color: var(--green-theme);
+	color: var(--navy-theme);
 }
