--- a/CSS/common.css
+++ b/CSS/common.css
@@ -31,6 +31,24 @@ body {
 	background-image: url(/images/stock.jpg);
 }
 
+#modalBtn {
+	margin: 0;
+	border: 0px;
+	cursor: pointer;
+	width:100%;
+	background-color: var(--green-theme);
+	color: var(--text-color-override);
+	font-weight: bold;
+	padding: 0.3rem;
+	font-size:0.7rem;
+	transition: opacity ease-in 0.1s;
+}
+
+#modalBtn:hover,
+#modalmodalBtn:focus{
+	opacity: 0.8;
+}
+
 .main-content {
 	flex:1;
 }
