--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -22,16 +22,27 @@ a {
 	border-radius: 8px;
 	background-color: var(--navy-theme);
 	position: relative;
-	animation: animateModal;
-	animation-duration: 0.4s;
+	-webkit-animation: animateModal;
+	        animation: animateModal;
+	-webkit-animation-duration: 0.4s;
+	        animation-duration: 0.4s;
 	margin: 15% 10%;
 }
 
 .modal-header {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	border-radius:8px 8px 0 0 ;
 	text-align: center;
 	font-family: "Merriweather",sans-serif;
@@ -54,6 +65,8 @@ a {
 	font-weight: bold;
 	float:right;
 	font-size: 36px;
+	-webkit-transition: color ease-in 0.2s;
+	-o-transition: color ease-in 0.2s;
 	transition: color ease-in 0.2s;
 }
 
@@ -62,6 +75,12 @@ a {
 	color: rgba(0, 0, 0, 1);
 	text-decoration: none;
 	cursor: pointer;
+}
+
+
+@-webkit-keyframes animateModal {
+	from {top:-300px;opacity: 0;}
+	to {top:0;opacity: 1;}
 }
 
 
