--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -69,6 +69,9 @@ a {
 	-o-transition: color ease-in 0.2s;
 	transition: color ease-in 0.2s;
 }
+-webkit-.close {
+	color:red;
+}
 
 .close:hover,
 .close:focus {
